# fiabilipym

./: README.md  changes.md  fiabilipym_weibull_montecarlo_demo.ipynb  main.py  pyproject.toml  setup.py  test.ipynb
docs/: fiabilipy_diff_report.md  fiabilipy_original_audit.md  fiabilipy_roadmap_proposals.md
fiabilipyg-2.8.1/fiabilipy/: markov.py  system.py  test_markov.py  test_system.py  voter.py
src/fiabilipym/: __init__.py  component.py  distribution.py  markov.py  system.py  voter.py
src/fiabilipym.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_markov.py  test_monte_carlo_systems.py  test_system.py  test_voter_monte_carlo.py
