[project]
name = "fiabilipym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fiabilipy>=2.7",
    "ipykernel>=6.31.0",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "pygraphviz>=1.11",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
]
