[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiabilipym"
version = "3.6.7"
description = "Reliability system modeling and analysis with graph visualization"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "chabotsi, crubier, cdrom1", email = "contact@fiabilipy.org" }
]
dependencies = [
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=1.26.4",
    "pygraphviz>=1.11",
    "scipy>=1.13.1",
    "sympy>=1.14.0",
]

[project.urls]
Homepage = "http://fiabilipy.org"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
